objects/Account.object
<CustomObject>
    <fields>
        <fullName>Acronym__c</fullName>
        <label>Acronym</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Commitment__c</fullName>
        <label>Annual Contract Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Sales_Plan__c</fullName>
        <label>Annual Sales Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Review_Comments__c</fullName>
        <inlineHelpText>255 max characters</inlineHelpText>
        <label>Business Review Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Review_Frequency__c</fullName>
        <inlineHelpText>Please select the frequency of when a business review with the client needs to be conducted.</inlineHelpText>
        <label>Business Review Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Review_Mode__c</fullName>
        <description>Mode of recent business review</description>
        <inlineHelpText>Select mode of when the last time a business review was conducted for the client.</inlineHelpText>
        <label>Business Review Mode</label>
        <picklist>
            <picklistValues>
                <fullName>In-person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_type__c</fullName>
        <label>Channel type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <label>Country/Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Business_Review__c</fullName>
        <description>Date of the last business review for the client.</description>
        <label>Date of Last Business Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Planned_Business_Review__c</fullName>
        <label>Date of Planned Business Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <label>Executive Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>Adrian Evans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art Valentine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charles Zhao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiona Collins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gary Gates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Poyiadgi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Hussey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paula Sisneros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Magallanes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Former_Client__c</fullName>
        <description>Indicates whether Promissor ever had a contract with this client</description>
        <label>Former Client</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ &amp; SEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia &amp; South Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Business_Developer__c</fullName>
        <label>Sales Business Developer</label>
        <picklist>
            <picklistValues>
                <fullName>Adam Barrigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ben Ruscoe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brijesh Kohli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daryl Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Bennett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divyalok Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eisuke Shinohara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ishikawa, Misa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jai Kataria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Kelly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenny Liu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaied Shawish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ken Zgraggen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manuj Mohan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marco Scarola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Boyles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patty Vonderharr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rumen Robban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonja Peers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Magallanes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanessa Steenson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joel Norris</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of any Promissor account</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.G2_Account</value>
        </filters>
        <label>All Accounts - G2</label>
        <sharedTo>
            <role>G2_International_Prog_Mgmt_BusDev</role>
            <role>Global_Proposal_Development</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Regulatory_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>All Regulatory Accounts</label>
        <sharedTo>
            <role>Administrator</role>
            <role>BD_Americas_Business_Development</role>
            <role>Global_Proposal_Development</role>
            <role>Regulatory_Americas_BusDev_Prog_Mgmt_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisYear</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>New This Year</label>
    </listViews>
    <listViews>
        <fullName>NewThisYearG2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.G2_Account</value>
        </filters>
        <label>New This Year - G2</label>
        <sharedTo>
            <role>G2_International_Prog_Mgmt_BusDev</role>
            <role>Global_Proposal_Development</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>G2_Account</fullName>
        <active>true</active>
        <label>G2 Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>G2_Certiport_Account</fullName>
        <active>true</active>
        <label>G2 Certiport Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regulatory_Account</fullName>
        <active>true</active>
        <label>Regulatory Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>